--- a/infra/cdk/requirements.txt
+++ b/infra/cdk/requirements.txt
@@ -1,59 +1,61 @@
 as==0.1
 attrs==20.3.0
 autopep8==1.5.7
-aws-cdk.assets==1.106.1
+aws-cdk.assets
 aws-cdk.aws-apigateway==1.106.1
 aws-cdk.aws-apigatewayv2==1.106.1
-aws-cdk.aws-applicationautoscaling==1.106.1
+aws-cdk.aws-applicationautoscaling
 aws-cdk.aws-autoscaling==1.106.1
-aws-cdk.aws-autoscaling-common==1.106.1
+aws-cdk.aws-autoscaling-common
 aws-cdk.aws-autoscaling-hooktargets==1.106.1
-aws-cdk.aws-certificatemanager==1.106.1
-aws-cdk.aws-cloudformation==1.106.1
-aws-cdk.aws-cloudfront==1.106.1
+aws-cdk.aws-certificatemanager
+aws-cdk.aws-cloudformation
+aws-cdk.aws-cloudfront
+aws-cdk.aws-cloudfront-origins
 aws-cdk.aws-cloudwatch==1.106.1
 aws-cdk.aws-codebuild==1.106.1
 aws-cdk.aws-codecommit==1.106.1
 aws-cdk.aws-codedeploy==1.106.1
-aws-cdk.aws-codeguruprofiler==1.106.1
+aws-cdk.aws-codeguruprofiler
 aws-cdk.aws-codepipeline==1.106.1
 aws-cdk.aws-codepipeline-actions==1.106.1
 aws-cdk.aws-cognito==1.106.1
+aws-cdk.aws-config==1.106.1
 aws-cdk.aws-dynamodb==1.106.1
-aws-cdk.aws-ec2==1.106.1
-aws-cdk.aws-ecr==1.106.1
-aws-cdk.aws-ecr-assets==1.106.1
+aws-cdk.aws-ec2
+aws-cdk.aws-ecr
+aws-cdk.aws-ecr-assets
 aws-cdk.aws-ecs==1.106.1
-aws-cdk.aws-efs==1.106.1
+aws-cdk.aws-efs
 aws-cdk.aws-elasticloadbalancing==1.106.1
-aws-cdk.aws-elasticloadbalancingv2==1.106.1
-aws-cdk.aws-events==1.106.1
+aws-cdk.aws-elasticloadbalancingv2
+aws-cdk.aws-events
 aws-cdk.aws-events-targets==1.106.1
 aws-cdk.aws-globalaccelerator==1.106.1
-aws-cdk.aws-iam==1.106.1
+aws-cdk.aws-iam
 aws-cdk.aws-kinesis==1.106.1
 aws-cdk.aws-kinesisfirehose==1.106.1
-aws-cdk.aws-kms==1.106.1
-aws-cdk.aws-lambda==1.106.1
-aws-cdk.aws-logs==1.106.1
-aws-cdk.aws-route53==1.106.1
+aws-cdk.aws-kms
+aws-cdk.aws-lambda
+aws-cdk.aws-logs
+aws-cdk.aws-route53
 aws-cdk.aws-route53-targets==1.106.1
-aws-cdk.aws-s3==1.106.1
-aws-cdk.aws-s3-assets==1.106.1
+aws-cdk.aws-s3
+aws-cdk.aws-s3-assets
 aws-cdk.aws-sam==1.106.1
 aws-cdk.aws-secretsmanager==1.106.1
 aws-cdk.aws-servicediscovery==1.106.1
-aws-cdk.aws-signer==1.106.1
-aws-cdk.aws-sns==1.106.1
+aws-cdk.aws-signer
+aws-cdk.aws-sns
 aws-cdk.aws-sns-subscriptions==1.106.1
-aws-cdk.aws-sqs==1.106.1
-aws-cdk.aws-ssm==1.106.1
+aws-cdk.aws-sqs
+aws-cdk.aws-ssm
 aws-cdk.aws-stepfunctions==1.106.1
-aws-cdk.cloud-assembly-schema==1.106.1
-aws-cdk.core==1.106.1
-aws-cdk.custom-resources==1.106.1
-aws-cdk.cx-api==1.106.1
-aws-cdk.region-info==1.106.1
+aws-cdk.cloud-assembly-schema
+aws-cdk.core
+aws-cdk.custom-resources
+aws-cdk.cx-api
+aws-cdk.region-info
 boto3==1.17.83
 botocore==1.20.83
 cattrs==1.5.0
