--- a/ts-infra/buildspec.yaml
+++ b/ts-infra/buildspec.yaml
@@ -6,6 +6,7 @@ phases:
   build:
     commands:
      - aws s3 sync ./lib/Site/ s3://${HOSTING_BUCKET}
+     - aws s3 sync ./lib/data/ s3://${HOSTING_BUCKET}/data
   post_build:
     commands:
       - echo "post build actions here"
