--- a/ts-infra/package.json
+++ b/ts-infra/package.json
@@ -27,6 +27,7 @@
     "@aws-cdk/aws-lambda": "^1.109.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.109.0",
     "@aws-cdk/aws-s3": "^1.109.0",
+    "@aws-cdk/aws-secretsmanager": "^1.109.0",
     "@aws-cdk/aws-ssm": "^1.109.0",
     "@aws-cdk/core": "1.108.1",
     "source-map-support": "^0.5.16"
