--- a/ts-infra/package.json
+++ b/ts-infra/package.json
@@ -21,15 +21,19 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.109.0",
     "@aws-cdk/aws-codebuild": "^1.109.0",
     "@aws-cdk/aws-codecommit": "^1.109.0",
+    "@aws-cdk/aws-codepipeline": "^1.109.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.109.0",
     "@aws-cdk/aws-iam": "^1.109.0",
     "@aws-cdk/aws-lambda": "^1.109.0",
     "@aws-cdk/aws-lambda-nodejs": "^1.109.0",
     "@aws-cdk/aws-s3": "^1.109.0",
     "@aws-cdk/aws-secretsmanager": "^1.109.0",
     "@aws-cdk/aws-ssm": "^1.109.0",
-    "@aws-cdk/core": "1.108.1",
+    "@aws-cdk/core": "^1.109.0",
+    "@aws-cdk/pipelines": "^1.109.0",
     "source-map-support": "^0.5.16"
   }
 }
