--- a/ts-infra/backendBuildspec.yaml
+++ b/ts-infra/backendBuildspec.yaml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
      - cd ts-infra
-     - npm ci
+     - npm install
   pre_build:
     commands:
      - npm install -g aws-cdk
