adding aws-cdk/aws-codepipeline and enabling cors to converstaion and conversations resources

--- a/ts-infra/backendBuildspec.yaml
+++ b/ts-infra/backendBuildspec.yaml
@@ -11,4 +11,4 @@ phases:
 
   build:
     commands:
-      - cdk -a deploy backendStack --require-approval=never --verbose
+      - cdk deploy backendStack --require-approval=never --verbose
