clean up ts-infra.ts

--- a/ts-infra/backendBuildspec.yaml
+++ b/ts-infra/backendBuildspec.yaml
@@ -5,10 +5,16 @@ phases:
     commands:
      - cd ts-infra
      - npm install
+     - echo "Install testing framework here"
   pre_build:
     commands:
      - npm install -g aws-cdk
 
   build:
     commands:
+      - cdk deploy S3Stack --require-approval=never --verbose
       - cdk deploy backendStack --require-approval=never --verbose
+
+  post_build:
+    commands:
+      - echo "Infra tests goes here. Or just run npm test"
