changing to ts-infra when deploying cdk stacks

--- a/ts-infra/backendDeployBuildSpec.yaml
+++ b/ts-infra/backendDeployBuildSpec.yaml
@@ -8,5 +8,6 @@ phases:
 
   build:
     commands:
+      - cd ts-infra
       - cdk -a . deploy S3Stack --require-approval=never --verbose
       - cdk -a . deploy backendStack --require-approval=never --verbose
