--- a/ts-infra/backendSynthBuildspec.yaml
+++ b/ts-infra/backendSynthBuildspec.yaml
@@ -16,3 +16,6 @@ phases:
 #      - cdk deploy S3Stack --require-approval=never --verbose
 #      - cdk deploy backendStack --require-approval=never --verbose
 
+artifacts:
+  base-directory: ts-infra/cdk.out
+  files: "**/*"
